--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800,900&display=swap" rel="stylesheet">
-    <title>Your bot name</title>
+    <title>Polar Bot</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-transparent">
@@ -28,9 +28,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Dashboard</a>
             </li>
-            <li class="nav-item">
+<!--             <li class="nav-item">
                 <a class="nav-link" href="#">Subscription</a>
-            </li>
+            </li> -->
         </ul>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -50,10 +50,10 @@
     </div>
 </nav>
 <div class="heading">
-    <h1 class="display-5 title">It's time to use Bot in your server.</h1>
-    <p class="subtitle">Bot is a multi-purpose bot ready to skill up and boost up your Discord server<br />Also features auto-moderation, administration, music and much more!</p>
-    <a class="btn btn-primary btn-lg" href="#start_link" target="_blank" role="button">Get started</a>
-    <a class="btn btn-secondary btn-lg" href="#server_link" target="_blank" role="button">Add to server</a>
+    <h1 class="display-5 title">Es hora de usar Bot en su grupo.</h1>
+    <p class="subtitle">Polar es un bot multipropósito listo para mejorar y potenciar su grupo<br />Tambien puedes eliminar y añadir personas con el bot</p>
+    <a class="btn btn-primary btn-lg" href="#start_link" target="_blank" role="button">Probar el bot</a>
+    <a class="btn btn-secondary btn-lg" href="#server_link" target="_blank" role="button">Descargar archivos del bot</a>
     <br /><br /><br /><br /><br /><br />
 </div>
 <div class="features">
