--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="heading">
     <h1 class="display-5 title">Es hora de usar Bot en su grupo.</h1>
     <p class="subtitle">Polar es un bot multipropósito listo para mejorar y potenciar su grupo<br />Tambien puedes eliminar y añadir personas con el bot</p>
-    <a class="btn btn-primary btn-lg" href="#start_link" target="_blank" role="button">Probar el bot</a>
+    <a class="btn btn-primary btn-lg" href="wa.me/595994966449?text=>menu" target="_blank" role="button">Probar el bot</a>
     <a class="btn btn-secondary btn-lg" href="#server_link" target="_blank" role="button">Descargar archivos del bot</a>
     <br /><br /><br /><br /><br /><br />
 </div>
@@ -116,7 +116,7 @@
     <div class="footer">
         <div class="bot-footer">
             <img src="assets/BotLogoWord.svg" width="150"><br />
-            Copyright © [BotOwner] - 2020
+            Copyright © DMods - 2022
         </div><br/>
         <div class="nouridio">website designed by <a href="https://nouridio.com"> nouridio</a></div>
     </di
