--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </div>
 </nav>
 <div class="heading">
-    <h1 class="display-5 title">Es hora de usar Bot en su grupo.</h1>
+    <h1 class="display-5 title">Es hora de usar Polar Bot en su grupo.</h1>
     <p class="subtitle">Polar es un bot multipropósito listo para mejorar y potenciar su grupo<br />Tambien puedes eliminar y añadir personas con el bot</p>
-    <a class="btn btn-primary btn-lg" href="wa.me/595994966449?text=>menu" target="_blank" role="button">Probar el bot</a>
+    <a class="btn btn-primary btn-lg" href="https://api.whatsapp.com/send/?phone=595994966449&text=%3Cmenu" target="_blank" role="button">Probar el bot</a>
     <a class="btn btn-secondary btn-lg" href="#server_link" target="_blank" role="button">Descargar archivos del bot</a>
     <br /><br /><br /><br /><br /><br />
 </div>
@@ -109,7 +109,7 @@
                 <div class="title">Ready to try Bot?</div>
                 <div class="subtitle">Invite Bot and start giving your server cool perks!</div>
                 <br />
-                <a class="btn btn-primary btn-lg" href="#start_link" role="button">Get started</a>
+                <a class="btn btn-primary btn-lg" href="https://api.whatsapp.com/send/?phone=595994966449&text=%3Cmenu" role="button">Get started</a>
             </div><br />
         </div>
     </div>
