--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Dashboard</a>
             </li>
-<!--             <li class="nav-item">
-                <a class="nav-link" href="#">Subscription</a>
-            </li> -->
+            <span class="nav-item"></span>
         </ul>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
