--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Dashboard</a>
             </li>
-            <span class="nav-item"></span>
+            <li class="nav-item">
+                <h1 id="visits"> </h1>
+            </li>
         </ul>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
